--- a/app/landingpage/components/why-choose-us/Whychooseus.module.scss
+++ b/app/landingpage/components/why-choose-us/Whychooseus.module.scss
@@ -2,9 +2,25 @@
 
 
 .WhyChooseUs {
+
+
+
     @include clamp-mixin.clamp-fluid(padding-top, 5rem, 14rem);
     @include clamp-mixin.clamp-fluid(padding-left, 0rem, 18rem);
     display: flex;
+
+    @media (max-width: 1160px) and (min-width: 768px) {
+        @include clamp-mixin.clamp-fluid(padding-left, 0rem, 13rem);
+    }
+
+    .MainImage {
+        @media (max-width: 1160px) and (min-width: 768px) {
+
+            @include clamp-mixin.clamp-fluid(width, 40rem, 50rem);
+            @include clamp-mixin.clamp-fluid(height, 30rem, 40rem);
+
+        }
+    }
 
     .ContentWrapper {
         @include clamp-mixin.clamp-fluid(padding-top, 3rem, 1.9rem);
@@ -13,8 +29,13 @@
         .Header {
             @include clamp-mixin.clamp-fluid(padding-right, 2rem, 25rem);
 
+            @media (max-width: 1160px) and (min-width: 768px) {
+                @include clamp-mixin.clamp-fluid(padding-right, 2rem, 2rem);
+            }
+
             .Title {
                 @include clamp-mixin.clamp-fluid(font-size, 2rem, 4rem);
+
             }
 
             .Description {
@@ -33,25 +54,34 @@
                 @include clamp-mixin.clamp-fluid(gap, 2rem, 3rem);
                 @include clamp-mixin.clamp-fluid(margin-top, 2rem, 5rem);
 
+                .ItemIconWrapper {
+                    .ItemIcon {}
+
+                    .ItemContent {
+                        @include clamp-mixin.clamp-fluid(padding-right, 0rem, 25rem);
+
+                        @media (max-width: 1160px) and (min-width: 768px) {
+                            @include clamp-mixin.clamp-fluid(padding-right, 0rem, 2rem);
 
 
-                .ItemContent {
-                    @include clamp-mixin.clamp-fluid(padding-right, 0rem, 25rem);
+                        }
 
-                    .ItemTitle {
-                        @include clamp-mixin.clamp-fluid(font-size, 1.6rem, 1.6rem);
+                        .ItemTitle {
+                            @include clamp-mixin.clamp-fluid(font-size, 1.6rem, 1.6rem);
+                        }
+
+                        .ItemDescription {
+                            @include clamp-mixin.clamp-fluid(font-size, 1.3rem, 1.6rem);
+                            @include clamp-mixin.clamp-fluid(margin-top, 0.6rem, 0.8rem);
+                            color: #676A6C;
+                        }
+
                     }
-
-                    .ItemDescription {
-                        @include clamp-mixin.clamp-fluid(font-size, 1.3rem, 1.6rem);
-                        @include clamp-mixin.clamp-fluid(margin-top, 0.6rem, 0.8rem);
-                        color: #676A6C;
-                    }
-
                 }
             }
         }
     }
+
 }
 
 @media (max-width: 768px) {
@@ -67,6 +97,8 @@
         height: 35rem;
         display: none;
     }
+
+
 
 
 }
